Update frontend side pages

--- a/client/src/styles/base/index.scss
+++ b/client/src/styles/base/index.scss
@@ -5,9 +5,25 @@ body {
   font-family: Roboto, 'Times New Roman', Times, serif;
 }
 
+.App{
+  display: block;
+  background-color: $fourthColor;
+}
+
 header{
   width: 100%;
   background-color: $principalColor;
+  display: flex;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 10px;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+}
+
+section{
+  grid-column: span 10;
 }
 
 button{
