--- a/client/src/styles/base/variables.scss
+++ b/client/src/styles/base/variables.scss
@@ -11,3 +11,12 @@ $fourthColor:           #EEEEEE;
 
 $alternativeColor:      #666666;
 $buttonColor:           #3483FA;  
+$buttonColorHover:      #2968c8;  
+$shippingColor:         #00cc00;  
+
+
+$sizeBigScreen:          1450px; 
+$sizeTabletLandScape:    1024px; 
+$sizeTabletPortrait:     850px;
+$sizePhone:              768px;
+$sizeSmallPhone:         370px;
