--- a/client/src/styles/components/Search.scss
+++ b/client/src/styles/components/Search.scss
@@ -1,19 +1,5 @@
 @import '../base/variables.scss';
 
-.nav{
-    margin: auto;
-    padding: 16px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.nav--logo{
-    width: auto;
-    margin: 0px 16px;
-}
-
 .search{
     height: 40px;
     background: $white;
@@ -27,17 +13,17 @@
     transition: all ease-in-out 0.2s;
 }
 
-.search--form{
+.search__form{
     display: flex;
     width: 100%;
 }
 
-.search--input{
+.search__input{
     padding: 0 16px;
     width: calc(100% - 74px);
 }
 
-.search--button{
+.search__button{
     width: 24px;
     border: none;
     background: transparent;
@@ -45,4 +31,17 @@
     padding: 0;
     position: relative;
     transition: all ease-in-out 0.2s;
+}
+
+@media screen and (max-width:$sizeTabletLandScape) {
+    .search{
+        width: auto;
+    }
+}
+
+
+@media screen and (max-width:$sizeSmallPhone) {
+    .search{
+        width: auto;
+    }
 }
